--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ android {
         applicationId "de.szalkowski.activitylauncher"
         minSdkVersion 11
         targetSdkVersion 19
+        versionCode 9
+        versionName "1.5.1"
     }
 
     buildTypes {
