--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.szalkowski.activitylauncher"
-    android:versionCode="9"
-    android:versionName="1.5.1" >
+    package="de.szalkowski.activitylauncher">
 
     <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
-    
 
     <application
         android:allowBackup="true"
